syntax = "proto3";
package utils;

option go_package = "github.com/microsoft/retina/pkg/utils";

message RetinaMetadata {
    uint32 bytes = 1;

    // DNS metadata.
    DNSType dns_type = 2;
    uint32 num_responses = 3;

    // TCP ID. Either Tsval or Tsecr will be set.
    uint64 tcp_id = 4;

    // Drop reason in Retina.
    DropReason drop_reason = 5;

    // Sampling metadata, for packetparser.
    uint32 previously_observed_packets = 6;
    uint32 previously_observed_bytes = 7;
    map<string, uint32> previously_observed_tcp_flags = 8;
}

enum DNSType {
    UNKNOWN = 0;
    QUERY = 1;
    RESPONSE = 2;
}

// Ref: pkg/plugin/dropreason/_cprog/drop_reason.h.
enum DropReason {
    IPTABLE_RULE_DROP = 0;
    IPTABLE_NAT_DROP = 1;
    TCP_CONNECT_BASIC = 2;
    TCP_ACCEPT_BASIC = 3;
    TCP_CLOSE_BASIC = 4;
    CONNTRACK_ADD_DROP = 5;
    UNKNOWN_DROP = 6;
}
